<resources>
    <string name="app_name">QuizApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_score">Score:</string>
    <string name="lbl_question">Question:</string>
    <string name="dash">-</string>
    <string name="next">Next</string>
    <string name="lbl_finish">Finish</string>
    <string name="msg_select_answer">Please select an answer</string>
    <string name="lbl_congrats">Congratulations</string>
    <string name="ok">OK</string>
    <string name="lbl_given_an">Given Answer :</string>
    <string name="lbl_actual_an">Correct Answer :</string>
</resources>
