<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_default_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_corner_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="5dp"
    tools:ignore="MissingPrefix">


    <TextView
        android:id="@+id/lblDialog_header"
        style="@style/TextView.StyleDialogHeader"
        android:text="@string/lbl_congrats"
        tools:ignore="MissingPrefix" />


    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/dash"
        android:textColor="@android:color/black"
        android:textSize="18sp" />


    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ok"
        android:textAllCaps="true" />


</LinearLayout>